--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="top-section">
             <form>
                 <label for="lookup">Enter a location</label>
-                <input id="lookup" type="text" placeholder="Lookup by city name">
+                <input id="lookup" type="text" placeholder="Lookup by city">
                 <button type="submit" class="button" aria-label="Submit location search">
                 Search</button>
             </form>
